# adaptivefiltering-library

./: .pre-commit-config.yaml  CONTRIBUTING.md  COPYING.md  LICENSE.md  MANIFEST.in  README.md  setup.cfg  test_library.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  pypi.yml
adaptivefiltering_library/: library.json  noop.json
afwizard_library/: noop.json
